--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,6 +21,7 @@
         <activity android:name=".Fragment_w2"></activity>
         <activity android:name=".Fragment_w3"></activity>
         <activity android:name=".Fragment_today"></activity>
+        <activity android:name=".Fragment_list"></activity>
         <activity android:name=".Walkthrough"></activity>
     </application>
 
