--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,5 +53,8 @@ dependencies {
     kapt "androidx.lifecycle:lifecycle-compiler:2.2.0"
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0"
 
+    implementation 'android.arch.lifecycle:extensions:1.1.1'
+    kapt 'android.arch.lifecycle:compiler:1.1.1'
 
+    compileOnly 'com.github.pengrad:jdk9-deps:1.0'
 }
