--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,6 +23,7 @@
         <activity android:name=".Fragment_today"></activity>
         <activity android:name=".Fragment_list"></activity>
         <activity android:name=".Walkthrough"></activity>
+        <activity android:name=".HabitsAdd"></activity>
     </application>
 
 </manifest>
