--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,6 +24,9 @@
         <activity android:name=".Fragment_list"></activity>
         <activity android:name=".Walkthrough"></activity>
         <activity android:name=".HabitsAdd"></activity>
+        <activity android:name=".HabitsUpdate"></activity>
+        <receiver android:name=".AlarmBroadcastReceiver"/>
     </application>
+
 
 </manifest>
