--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,7 +8,7 @@ android {
     buildToolsVersion "30.0.0"
 
     defaultConfig {
-        applicationId "com.example.habitstracker"
+        applicationId "com.mochamadfghd.habitstracker"
         minSdkVersion 16
         targetSdkVersion 30
         versionCode 1
