--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.habitstracker">
+    package="com.mochamadfghd.habitstracker">
 
     <application
         android:allowBackup="true"
@@ -20,16 +20,11 @@
         <activity android:name=".Fragment_w1"></activity>
         <activity android:name=".Fragment_w2"></activity>
         <activity android:name=".Fragment_w3"></activity>
-        <activity android:name=".Fragment_today"></activity>
         <activity android:name=".Fragment_list"></activity>
         <activity android:name=".Walkthrough"></activity>
         <activity android:name=".HabitsAdd"></activity>
         <activity android:name=".HabitsUpdate"></activity>
         <activity android:name=".Fragment_info"></activity>
-        <receiver
-            android:name=".AlarmReceiver"
-            android:enabled="true"
-            android:exported="false" />
     </application>
 
 
